@@ -1,5 +1,15 @@
 2021-03-11  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-insn.def: define instruction `rev'.
+	* libpoke/pkl-asm.c (pkl_asm_insn_rev): New function.
+	(pkl_asm_insn): Support REV.
+	* libpoke/pkl-gen.c (pkl_gen_pr_print_stmt): Use the rev
+	macro-instruction.
+	(pkl_gen_pr_funcall): Likewise.
+	(pkl_gen_pr_func): Likewise.
+
+2021-03-11  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* cfg.mk (sc_unitalicised_etc): Change rule so it is not triggered
 	by mentions to files in etc/.
 	* utils/pk-strings.in: Remove trailing whitespaces.
